Conexão do redux com a listagem de produtos

--- a/src/store/static/store.css
+++ b/src/store/static/store.css
@@ -387,7 +387,7 @@ nav.menu.open {
   margin-bottom     : 1rem;
 }
 
-/*.thumbnail-produto.active*/
+.thumbnail-produto.active,
 .thumbnail-produto:hover {
   -webkit-filter: grayscale(0);
 }
