--- a/src/frontend/store.css
+++ b/src/frontend/store.css
@@ -824,12 +824,15 @@ nav.menu.open {
   margin:0 auto;
   margin-bottom: 20px;
 }
-
 .titulo-mysafie p{
   margin-top: 25px;
 }
 .my-safie .minhas-medidas p{
   text-align: center;
+}
+
+.peca.six.columns{
+  margin-left:5px;
 }
 
 .my-safie .cerca{
@@ -858,8 +861,21 @@ nav.menu.open {
 .my-safie .meus-pedidos .peca{
    background-color: #fbeee8;
   height: 150px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   padding:10px;
+  position: relative;
+}
+.my-safie .meus-pedidos .peca .obs p span{
+  color: rgba(238,166,130,1);
+}
+
+.my-safie .meus-pedidos .peca .obs p:last-child{
+  position: absolute;
+  bottom: 5px;
+}
+
+.my-safie .meus-pedidos .peca:last-child{
+  /*margin-left: -10px;*/
 }
 
 .my-safie .meus-pedidos p strong{
@@ -868,6 +884,7 @@ nav.menu.open {
 .my-safie .meus-pedidos p{
   font-size: 13px;
   margin: 0px;
+  margin-left: 10px;
 }
 
 .my-safie .my-address .address{
@@ -890,11 +907,19 @@ nav.menu.open {
   margin: 0px;
 }
 
+.my-safie .my-address input{
+  margin-top: 70px;
+  margin-left: 20px;
+}
+
 .my-safie .new-address button{
   background-color: #f8dacc;
   border: none;
   float: right;
-  width: 400px;
+  width: 250px;
+  font-size: 13px;
+  padding: 10px;
+  line-height: 0px;
 }
 
 .meu-carrinho{
@@ -917,7 +942,7 @@ nav.menu.open {
 
 .meu-carrinho .three i{
   position: absolute;
-  right: 38px;
+  right: 0;
   top: 7px;
   color: #f5c2a2;
   cursor: pointer;
@@ -935,9 +960,9 @@ nav.menu.open {
    background-color: #fae6db;
   border: none;
   float: right;
-  width: 400px;
+  width: 230px;
   margin-bottom: 20px;
-  padding: 5px;
+  padding: 10px;
   margin-top: 20px;
 }
 /* Larger than tablet */
