--- a/src/frontend/store.css
+++ b/src/frontend/store.css
@@ -810,6 +810,8 @@ nav.menu.open {
 
 .boas-vindas{
   text-align: center;
+  margin-bottom: 100px;
+  margin-top: -20px;
 }
 
 .titulo-mysafie{
@@ -823,9 +825,25 @@ nav.menu.open {
   border:1px solid;
   margin:0 auto;
   margin-bottom: 20px;
+  position: relative;
+  
 }
 .titulo-mysafie p{
   margin-top: 25px;
+  position: relative;
+}
+
+.titulo-mysafie:before{
+  content:'';
+  border-left:1px solid #000;
+  border-bottom:1px solid #000;
+  position:absolute;
+  width:100px;
+  height:20px;
+  right:-40px;
+  bottom: -20px;
+  z-index: -1;
+
 }
 .my-safie .minhas-medidas p{
   text-align: center;
@@ -837,7 +855,7 @@ nav.menu.open {
 
 .my-safie .cerca{
   border:solid 1px #000;
-  margin-bottom: 30px;
+  margin-bottom: 50px;
 }
 .my-safie table{
   margin-top: 20px;
