Ajustes visuais das sacolas de compras

--- a/src/store/static/store.css
+++ b/src/store/static/store.css
@@ -140,7 +140,12 @@ button {
   position          : relative;
 }
 
-.navigation i {
+.navigation i.fa-shopping-bag {
+  padding-top: 2rem;
+  display:none;
+}
+
+.navigation i.fa-bars {
   font-size  : 3rem;
   margin-left: 3rem;
   margin-top : 3rem;
@@ -173,6 +178,11 @@ nav.menu .submenu a {
   border      : none;
   margin-top  : auto;
   margin-right: auto;
+}
+
+nav.menu a:last-child {
+  border: none;
+  margin: none;
 }
 
 .submenu {
@@ -234,16 +244,16 @@ nav.menu.open {
   top               : 0;
   height            : auto;
   background        : none;
-  cursor            : pointer;
 }
 
-.quickbag a i {
+.quickbag i.fa-shopping-bag {
   font-size   : 3rem;
   margin-right: 3rem;
   margin-top  : 3rem;
+  cursor: pointer;
 }
 
-.fa-shopping-bag:after {
+.quickbag .fa-shopping-bag:after {
   content    : "\f290";
   position   : relative;
   margin-left: -3rem;
@@ -402,7 +412,7 @@ nav.menu.open {
 }
 
 .layout-content {
-  margin-top   : 5rem;
+  margin-top   : 2rem;
   margin-bottom: 3rem;
   min-height   : 100vh;
 }
@@ -1152,8 +1162,12 @@ nav.menu.open {
 
 }
 @media screen and (min-width: 1000px) {
-  .navigation i {
+  .navigation i.fa-bars {
     display: none;
+  }
+
+  .navigation i.fa-shopping-bag {
+    display: inline-block;
   }
 
   .navigation nav.menu {
@@ -1167,7 +1181,7 @@ nav.menu.open {
     position  : fixed;
   }
 
-  .quickbag a i {
+  .quickbag i.fa-shopping-bag {
     margin-top  : 3vh;
     margin-right: auto;
   }
