--- a/src/frontend/store.css
+++ b/src/frontend/store.css
@@ -820,7 +820,7 @@ nav.menu.open {
 
 .conteudo-checkout .box .linha-exterior-2{
   padding: 5px;
-  border: 1px solid #eac7ab;
+  border: 1px solid #eac7ab; 
 }
 
 .conteudo-checkout .box .linha-exterior-2 .inside-box{
@@ -844,8 +844,24 @@ nav.menu.open {
   color: #fff;
   width: auto;
   background-color: #7b7b7b;
+  border: none;
+  border-radius: 0px;
+}
+.linha-exterior p,.linha-exterior-2 p{
+  margin-bottom: -5px;
 }
 
+.alterar-end{
+  float: right;
+  font-size:12px;
+  color: #666; 
+  margin-top: 3px;
+  margin-bottom: 3px;
+}
+.new-address-button{
+  background-color: #eac7ab;
+  border: none;
+}
 /* agradecimento */
 .conteudo-agradecimento{
   position: relative;
@@ -886,6 +902,8 @@ nav.menu.open {
   color: #eac7ab;
   text-transform: uppercase;
   width: 50%;
+  border: none;
+  border-radius: 0px;
 }
 
 
