--- a/src/frontend/store.css
+++ b/src/frontend/store.css
@@ -620,6 +620,9 @@ nav.menu.open {
   margin-left: 0;
 }
 
+.politica-page .columns{
+  margin-left: 10px;
+}
 .politicas {
   font-size: 1.2rem;
 }
@@ -1110,6 +1113,116 @@ nav.menu.open {
     position: relative;
     text-align: center;
   }
+
+.termos-politica h2{
+  text-align: center;
+}
+.termos-politica h4{
+  border-bottom: 2px solid #eac7ab;
+  font-size: 20px;
+  font-weight: 700;
+}
+/* Medidas */
+
+.saiba-mais{
+  margin-top: 20px;
+  text-align: center;
+}
+.saiba-mais span{
+  font-size: 13px;
+  color: #a8a8a8;
+}
+.tabela-medidas{
+  margin-top: 50px;
+}
+
+.saiba-mais hr{
+  width: 30%;
+  border-size:3px;
+  margin-top: 0px;
+  margin-bottom: 5px;
+}
+
+.saiba-mais i{
+  color: #a8a8a8;
+  font-size:20px;
+  margin-top: 0px; 
+}
+
+.tabela-medidas img{
+  width: 60%;
+  margin-bottom: 50px;
+  position: relative;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, 0%) 
+
+}
+.tabela-medidas h4{
+  text-align: center;
+}
+
+.tabela-medidas h5{
+  text-align: center;
+  color: #eac7ab;
+  font-weight: 700;
+  font-size: 16px;
+  width: 100%;
+  border-bottom: 3px solid #eac7ab; 
+}
+
+.tabela-medidas p i{
+
+  color: #eac7ab;
+  font-size: 22px;
+}
+
+.safie-funciona{
+  margin-top: 50px;
+}
+.safie-funciona h5{
+  font-weight: 500;
+
+}
+
+.linha-metade{
+  width: 30%;
+  border:2px solid;
+  border-color: #eac7ab;
+  float: left;
+  margin-top:-20px; 
+}
+.mostruario{
+  background-image: url(img/mostruario-bg.jpg);
+  background-size: 100% 100%;
+  width: 100%;
+  height: 300px;
+  padding: 10px;
+  margin-top: 50px;
+  border: 4px solid #eac7ab;
+}
+
+.mostruario .texto .four{
+  float: right;
+  margin-right: 100px;
+  margin-top: 5%;
+  text-align: center;
+}
+
+.mostruario .call-to-action{
+  background-color: #eac7ab;
+  padding: 10px;
+  width: 100%;
+  text-transform: uppercase;
+  font-size: 17px;
+  color: #606060;
+  font-weight: 700;
+
+}
+
+.alinhamento-centro{
+  text-align: center;
+}
 
 /* Larger than tablet */
 @media (min-width: 750px) {
