Ajustes  de layout e atualizacao dos TODOS

--- a/src/store/static/store.css
+++ b/src/store/static/store.css
@@ -294,7 +294,7 @@ nav.menu.open {
 }
 
 .quickbag .items .quickbag-item p {
-    text-transform: capitalize;
+    text-transform: uppercase;
     font-size: small;
     color: #666;
 }
@@ -731,6 +731,10 @@ nav.menu.open {
     font-style: italic;
 }
 
+.produto-sacola-medidas .tamanho i.fa-exclamation-triangle {
+    color: #B71C1C;
+}
+
 .footer-band {
     padding-left: 5rem;
     border-bottom: 1rem solid #EEA682;
@@ -1027,7 +1031,6 @@ nav.menu.open {
     font-size: 12px;
     color: #666;
     margin-top: 3px;
-    margin-bottom: 3px;
 }
 
 .new-address-button {
@@ -1235,6 +1238,14 @@ nav.menu.open {
     font-size: 20px;
 }
 
+.address .inside-box i.fa-times-circle-o {
+    font-size: 1.8rem;
+    color: #666;
+    position: absolute;
+    right: 2rem;
+    top: 8rem;
+}
+
 .my-safie .my-address p {
     margin: 0;
 }
@@ -1279,8 +1290,8 @@ nav.menu.open {
 
 .meu-carrinho .three i {
     position: absolute;
-    right: 0;
-    top: 7px;
+    right: 1.5rem;
+    top: 0.5rem;
     color: #f5c2a2;
     cursor: pointer;
     font-size: 20px;
@@ -1289,6 +1300,10 @@ nav.menu.open {
 .meu-carrinho .three p {
     text-align: center;
     font-weight: 700;
+}
+
+.my-bag-item {
+    text-transform: uppercase;
 }
 
 .limpar {
