Criação da página de políticas e links do rodapé

--- a/src/store/static/store.css
+++ b/src/store/static/store.css
@@ -1330,6 +1330,10 @@ nav.menu.open {
   text-align: center;
 }
 
+.termos-politica {
+  text-align: justify;
+}
+
 .termos-politica h2 {
   text-align: center;
 }
